<?xml version="1.0"?>
<package format="3">
  <name>mushr_description</name>
  <version>1.0.0</version>
  <description>This package contains models for MuSHR</description>

  <maintainer email="planc509@cs.washington.edu">planc509</maintainer>
  <author email="planc509@cs.washington.edu">planc509</author>

  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies (xacro needed to generate URDFs at build time) -->
  <build_depend>xacro</build_depend>

  <!-- Runtime dependencies (URDF consumers) -->
  <exec_depend>realsense2_description</exec_depend>

  <!-- Export information for ROS 2 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
