<?xml version="1.0"?>
<package format="3">
  <name>mushr_hardware</name>
  <version>0.0.0</version>
  <description>The mushr_hardware package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="schmittle@todo.todo">schmittle</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>ydlidar_ros2_driver</build_depend>
  <build_depend>push_button_utils</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>push_button_utils</exec_depend>

</package>
